<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResetPassword">

    <ImageView
        android:layout_width="132dp"
        android:layout_height="141dp"
        android:contentDescription="@string/app_name" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_username_reset"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_user_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirm_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_reset"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="resetSend"
        android:text="@string/reset"

        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_back_login"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="loginBack"
        android:text="@string/back_login"

        />


</LinearLayout>