<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TestActivity">



    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"

        android:onClick="deleteUser"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"

        />

    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"

        android:onClick="goChat"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat"

        />


    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"

        android:onClick="viewProfile"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"

        />


    <android.support.v7.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Colored"

        android:onClick="logout"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"

        />





</LinearLayout>